add VICIdial integration: credentials management, database config, agent workspace, and Laravel Reverb setup

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,33 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# VICIdial Database Connection
+VICIDIAL_DB_HOST=127.0.0.1
+VICIDIAL_DB_PORT=3306
+VICIDIAL_DB_DATABASE=asterisk
+VICIDIAL_DB_USERNAME=cron
+VICIDIAL_DB_PASSWORD=
+
+# VICIdial HTTP API
+VICIDIAL_API_URL=http://127.0.0.1/agc/api.php
+
+# VICIdial Asterisk AMI
+VICIDIAL_AMI_HOST=127.0.0.1
+VICIDIAL_AMI_PORT=5038
+VICIDIAL_AMI_USER=
+VICIDIAL_AMI_SECRET=
+
+# Laravel Reverb (WebSockets)
+BROADCAST_CONNECTION=reverb
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST="localhost"
+REVERB_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
