--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,7 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 # VICIdial Database Connection
+VICIDIAL_SERVER_IP=127.0.0.1
 VICIDIAL_DB_HOST=127.0.0.1
 VICIDIAL_DB_PORT=3306
 VICIDIAL_DB_DATABASE=asterisk
