--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#86efac,#a5f3fc\" \"php artisan serve\" \"php artisan queue:listen --tries=1 --timeout=0\" \"php artisan pail --timeout=0\" \"npm run dev\" \"php artisan ami:listen\" \"php artisan reverb:start --port=8080\" --names=server,queue,logs,vite,ami,reverb --kill-others"
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#86efac,#a5f3fc\" \"php artisan serve\" \"php artisan queue:listen --tries=1 --timeout=0\" \"php artisan pail --timeout=0\" \"npm run dev\" \"php artisan ami:listen\" \"php artisan reverb:start\" --names=server,queue,logs,vite,ami,reverb --kill-others"
         ],
         "dev:ssr": [
             "npm run build:ssr",
