--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "jssip": "^3.13.5",
         "laravel-echo": "^2.3.0",
         "laravel-vite-plugin": "^2.0.0",
         "lucide-vue-next": "^0.468.0",
